# rrm

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md
cmake/: EnableWarnings.cmake
src/: constants.h.in  dump.c  dump.h  exec.c  exec.h  main.c  option.c  option.h  path.c  path.h  status.c  status.h  trash.c  trash.h  utils.h
test/: main.c  option_test.c  option_test.cpp  path_test.c  trash_test.c
